--- a/app/views/monsters/show.html.erb
+++ b/app/views/monsters/show.html.erb
@@ -6,4 +6,8 @@
 <ul>
     <li><%= link_to "Back", root_path %></li>
     <li><%= link_to "Edit", edit_monster_path(@monster) %></li>
+    <li><%= link_to "Destroy", monster_path(@monster), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Are you sure?"
+                  } %></li>
 </ul>
